tests/samples/negative/expressions/shift_amount_overflow.ax
module shift_amount_overflow;

fn main() -> i32 {
    let value: i32 = 1 << 32;
    return value;
}
